@@ -13,6 +13,18 @@ Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "geos_c_dll", "geos_c_dll\ge
 		{108E75A3-0A92-489A-B1A9-8F071D40A108} = {108E75A3-0A92-489A-B1A9-8F071D40A108}
 	EndProjectSection
 EndProject
+Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "Solution Items", "Solution Items", "{8584EE81-D4E9-4EC7-ABF2-389E5F9D0107}"
+	ProjectSection(SolutionItems) = preProject
+		..\..\AUTHORS = ..\..\AUTHORS
+		..\..\ChangeLog = ..\..\ChangeLog
+		..\..\COPYING = ..\..\COPYING
+		..\..\INSTALL = ..\..\INSTALL
+		..\..\makefile.vc = ..\..\makefile.vc
+		..\..\NEWS = ..\..\NEWS
+		..\..\README = ..\..\README
+		..\..\TODO = ..\..\TODO
+	EndProjectSection
+EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
 		Debug|Win32 = Debug|Win32
